Add performance overview / rendering time breakdown

--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -41,6 +41,8 @@
 \usepackage{cleveref}
 \usepackage{tabulary}
 \setlist{itemsep=2pt,parsep=2pt}
+% \setlist{topsep=0px,partopsep=0px}
+% \setlist{nolistsep}
 
 % Title page
 
@@ -115,7 +117,6 @@
 
 \chapter{purgatory}
 
-\todo{performance overview. how much time does everything need}
 \todo{make figures nicer}
 \todo{screenshot alignment stuff}
 
