--- a/chap-results.tex
+++ b/chap-results.tex
@@ -17,7 +17,7 @@ The implementation is tested in the Crytek Sponza and San Miguel scene, with 260
     \1 2048\,px² ISM texture, i.\,e., 64\,px² per ISM
     \1 Single-pixel point renderer enabled, 16 VPLs considered per point, up to 4 collected
     \1 4x4 interleaving pattern
-    \1 Clustered shading: 128\,px² tile size, 16 depth slices
+    \1 Tiled shading enabled
 \end{outline}
 
 \noindent
@@ -31,6 +31,29 @@ The hardware specification of the testing system is as follows:
 The GTX 980 has been locked to its base clock rate of 1164\,Mhz using SetStablePowerState.exe\footnote{\url{https://developer.nvidia.com/setstablepowerstateexe-\%20disabling\%20-gpu-boost-windows-10-getting-more-deterministic-timestamp-queries}}, preventing its GPU Boost feature\footnote{\url{http://www.geforce.com/hardware/technology/gpu-boost-2}} from altering the results depending on the GPUs temperature and power draw. This comes at the cost of preventing the GPU from using its maximum potential, but combined with the factory-overclocking, the results should be close to the real-world performance.
 
 \pagebreak
+
+
+\section{Rendering Time Breakdown}
+\label{sec:results:RenderingTimeBreakdown}
+
+
+\begin{table}[h]
+\begin{center}
+    \begin{tabulary}{0.98\textwidth}{| L | L | L | L | L | L | L || L |}
+        \hline
+        G-Buffer & RSM & ISM & GI & SSAO & Combine & Blit & Total \\ \hline
+        0.6\,ms & 0.2\,ms & 2.7\,ms & 3.2\,ms & 1.4\,ms & 0.3\,ms & 0.3\,ms & 8.70\,ms \\
+        \hline
+    \end{tabulary}
+    \caption{Timing breakdown of an entire frame rendered by the presented software. Timings are in milliseconds.}
+    \label{tab:results:timing_breakdown_frame}
+\end{center}
+\end{table}
+
+\Cref{tab:results:timing_breakdown_frame} gives an overview of the time needed for rendering a single frame. The Crytek Sponza scene and default settings have been used. All timings measure GPU time only, there are no noteworthy calculations done on the CPU. With a total of 8.7\,ms, the application achieves real-time framerates while leaving room for more expensive calculations, higher output resolutions or more detailed scenes. 
+
+The GI, SSAO and combine pass operate in screen space and are mostly dependent on the screen size (and, of course, on light and sample count in the case of GI and SSAO, respectively). The G-Buffer and RSM generation follow the usual performance characteristics and are mainly dependent on output resolution and geometric complexity. The performance behavior of the ISM rendering heavily depends on the settings and is further detailed below. The blit phase copies a texture to the back buffer and exists for debugging purposes only.
+
 
 \section{RSM Generation and VPL Sampling}
 \label{sec:results:RsmAndVplSampling}
