--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -115,34 +115,79 @@
 \include{chap-results}
 \include{chap-conclusion}
 
-\chapter{purgatory}
+\chapter{Todos}
 
-\todo{make figures nicer}
-\todo{screenshot alignment stuff}
+\subsubsection{figures}
 
-\todo{do some pseudocode}
-\todo{more debug views, debug data visualizations}
-\todo{daniel's pipeline visualizations, see emails}
-\todo[color=yellow]{fixed blue noise pattern when sampling RSM?}
+\todo[inline]{make figures nicer}
+\todo[inline]{screenshot alignment stuff}
 
-\todo[color=yellow]{rename gi shader to final gathering. other renames?}
+\todo[inline]{implementation pipeline \ref{fig:RenderingPipelineOverview} adds little value over concept pipeline.}
+
+\todo[inline]{Pipeline figures for all sections in implementation. e.g. create RSM, which is then sampled, and the samples are put into two buffers.}
+
+\todo[inline]{Interleaved shading algorithm figure comparing buffer splitting vs compute shaders in addition to pipeline figure \Cref{sec:impl:interleavedShading}}
+
+\todo[inline]{Temporal coherence/frame-to-frame diff when light moves figure. end of \Cref{sec:results:RsmAndVplSampling}}
+
+\todo[inline]{more debug views, debug data visualizations}
+\todo[inline]{daniel's pipeline visualizations, see emails}
 
 
-\todo{4k tests}
+\subsubsection{content}
 
-\todo[color=white]{many-light theory}
+\todo[inline]{do some pseudocode}
+
+\todo[inline,color=white]{many-light theory}
 - focusing on why this is a valid model
 - maybe explain clamping here and leave it out everywhere else?
 
-\todo[color=white]{explain clamping in concept}
+\todo[inline,color=white]{explain clamping in concept}
 
-\todo[color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
+\todo[inline]{put VPL shuffling comparison anywhere, maybe results \Cref{sec:results:ism:quality}}
+
+\todo[inline]{ISM quality: Screenshots when enlarging the points / making them smaller. Discuss. \Cref{sec:results:ism:quality}}
+
+\todo[inline]{ISM quality: Screenshots when doing more points. either by tessellation or by collecting more. Discuss. \Cref{sec:results:ism:quality}}
+
+\todo[inline,color=yellow]{ISMs: point count for splat renderer and output them somehow. \Cref{sec:results:ism:quality}}
+
+\todo[inline]{ISM comparison: Add notes about scaling when i have point counts \Cref{sec:results:ism:comparison}}
+
+\todo[inline]{ISM quality: for single-pixel-renderer: maybe show one full-size shadow map to show this *can* work. \Cref{sec:results:ism:quality}}
 
 
-\todo{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
-\todo[color=white]{formatting requirements? like that comma after e.g. weirdness}
-\todo{brighter version for print}
-\todo{cleanup references}
+\todo[inline]{ISM performance: Numbers when enlarging the points / making them smaller. Discuss. Note how the single-pixel renderer is (hopefully) not affected by point size. \Cref{sec:results:ism:quality}}
+
+\todo[inline]{ISM performance: Numbers when doing more points. either by tessellation or by collecting more. Discuss. \Cref{sec:results:ism:quality}}
+
+
+
+\subsubsection{code}
+
+\todo[inline,color=yellow]{implement some moving object. show temporal coherency when it moves. or even moving spherical light. \Cref{sec:results:ism}}
+
+\todo[inline,color=yellow]{fixed blue noise pattern when sampling RSM?}
+
+\todo[inline,color=yellow]{rename gi shader to final gathering. other renames?}
+
+\todo[inline]{4k tests}
+
+\todo[inline,color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
+
+\todo[inline,color=yellow]{implement that area thing \Cref{sec:impl:ismRendering}}
+
+\todo[inline,color=yellow]{implement ISM max quality. every point into every ISM. likely render everything once for each ISM. a checkbox: when checked, compute high-quality once and do not change. back to normal when unchecked. \Cref{sec:results:ism:quality}}
+
+\todo[inline]{ISM performance: Impact of packing? \Cref{sec:results:ism:performanceSinglePixelRenderer}}
+
+
+\subsubsection{misc}
+
+\todo[inline]{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
+\todo[inline,color=white]{formatting requirements? like that comma after e.g. weirdness}
+\todo[inline]{brighter version for print}
+\todo[inline]{cleanup references}
 
 
 % \include{chap-examples}
@@ -164,7 +209,5 @@
 \backmatter
 
 \include{statutorydeclaration}
-
-\listoftodos
 
 \end{document}
