Some references cleanup

--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -23,6 +23,8 @@
   andothers = {\emph{et~al\adddot}}
 }
 \addbibresource{foo-thesis.bib}
+\AtEveryBibitem{\clearlist{location}}
+\AtEveryBibitem{\clearfield{address}}
 
 % Code listings
 
