--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1,58 +1,3 @@
-@ARTICLE{bowman:reasoning,
-	AUTHOR = "Mic Bowman and Saumya K. Debray and Larry L. Peterson",
-	TITLE = "Reasoning About Naming Systems",
-	JOURNAL = "ACM Trans. Program. Lang. Syst.",
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {795-825},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@ARTICLE{braams:babel,
-	AUTHOR = "Johannes Braams",
-	TITLE = "Babel, a Multilingual Style-Option System for Use with LaTeX's Standard Document Styles",
-	JOURNAL = {TUGboat},
-	VOLUME = {12},
-	NUMBER = {2},
-	PAGES = {291-301},
-	MONTH = "June",
-	YEAR = {1991}	}
-
-@INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March",
-	YEAR = {1991}	}
-
-@ARTICLE{herlihy:methodology,
-	AUTHOR = "Maurice Herlihy",
-	TITLE = "A Methodology for Implementing Highly Concurrent
-	Data Objects",
-	JOURNAL = {ACM Trans. Program. Lang. Syst.},
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {745-770},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986"	}
-
-@BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
-
-
 @inproceedings{Keller:1997:InstantRadiosity,
  author = {Keller, Alexander},
  title = {Instant Radiosity},
@@ -171,40 +116,14 @@
  keywords = {hardware-assisted rendering, indirect illumination},
 }
 
-@inproceedings{Dachsbacher:2006:SII:1111411.1111428,
- author = {Dachsbacher, Carsten and Stamminger, Marc},
- title = {Splatting Indirect Illumination},
- booktitle = {Proceedings of the 2006 Symposium on Interactive 3D Graphics and Games},
- series = {I3D '06},
- year = {2006},
- isbn = {1-59593-295-X},
- location = {Redwood City, California},
- pages = {93--100},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/1111411.1111428},
- doi = {10.1145/1111411.1111428},
- acmid = {1111428},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {global illumination, hardware-assisted rendering, real-time rendering, shadow maps},
-}
-
-@inproceedings{Laurent:2016:Stochastic,
- author = {Laurent, Gilles and Delalandre, Cyril and de La Rivi\`{e}re, Gr{\'e}goire and Boubekeur, Tamy},
- title = {A Stochastic and Scalable Approach for Real-time Global Illumination},
- booktitle = {Proceedings of the 20th ACM SIGGRAPH Symposium on Interactive 3D Graphics and Games},
- series = {I3D '16},
+@article{Laurent:2016:ForwardLightCuts,
+ author = {Gilles Laurent and Cyril Delalandre and Gregoire de La Riviere and Tamy Boubekeur},
+ title = {Forward Light Cuts: A Scalable Approach to Real-Time Global Illumination},
+ journal = {Compurer Graphics Forum (Proc. EGSR 2016)},
  year = {2016},
- isbn = {978-1-4503-4043-4},
- location = {Redmond, Washington},
- pages = {183--184},
- numpages = {2},
- url = {http://doi.acm.org/10.1145/2856400.2876005},
- doi = {10.1145/2856400.2876005},
- acmid = {2876005},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {CAD, graphics hardware, interactive global illumination, simplification/level of detail},
+ volume = {35},
+ number = {4},
+ pages = {79--88}
 }
 
 @article{georgiev2010simple,
@@ -214,8 +133,6 @@
   volume={4},
   year={2010}
 }
-
-
 
 @article {ritschel2011ismsViewAdaptive,
 	author = {Ritschel, Tobias and Eisemann, Elmar and Ha, Inwoo and Kim, James D. K. and Seidel, Hans-Peter},
@@ -272,11 +189,6 @@
   booktitle={Eurographics (Short Papers)},
   pages={9--12},
   year={2012}
-}
-
-@article{weinzierlefficient,
-  title={Efficient VAL-based Real-Time Global Illumination},
-  author={Weinzierl-Heigl, Christoph and Preiner, Supervised Reinhold}
 }
 
 
@@ -405,12 +317,19 @@ url="http://dx.doi.org/10.1007/978-3-319-27863-6_14"
 }
 
 @inproceedings{dachsbacher2006splatting,
-  title={Splatting indirect illumination},
-  author={Dachsbacher, Carsten and Stamminger, Marc},
-  booktitle={Proceedings of the 2006 symposium on Interactive 3D graphics and games},
-  pages={93--100},
-  year={2006},
-  organization={ACM}
+ author = {Dachsbacher, Carsten and Stamminger, Marc},
+ title = {Splatting Indirect Illumination},
+ booktitle = {Proceedings of the 2006 Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '06},
+ year = {2006},
+ isbn = {1-59593-295-X},
+ pages = {93--100},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1111411.1111428},
+ doi = {10.1145/1111411.1111428},
+ acmid = {1111428},
+ publisher = {ACM},
+ keywords = {global illumination, hardware-assisted rendering, real-time rendering, shadow maps},
 }
 
 @inproceedings{Nichols:2009:splatting,
@@ -658,7 +577,7 @@ pages = {223--233}
 name = {Octree-Based Sparse Voxelization Using The GPU Hardware Rasterizer},
 author = {Crassin, Cyril and Green, Simon},
 note = "URL: \url{http://www.seas.upenn.edu/~pcozzi/OpenGLInsights/OpenGLInsights-SparseVoxelization.pdf} (Chapter PDF),
-\url{http://blog.icare3d.org/2012/05/gtc-2012-talk-octree-based-sparse.html} (GTC 2012 Talk), \url{http://www.gputechconf.com/gtcnew/on-demand-gtc.php?sessionTopic=&searchByKeyword=&submit=&select=+&sessionEvent=&sessionYear=&sessionFormat=\#1465} (GTC 2012 Talk Video), \url{http://www.icare3d.org/research/GTC2012_Voxelization_public.pdf} (GTC 2012 Slides PDF), \url{http://www.icare3d.org/research/GTC2012_Voxelization_public.pptx} (GTC 2012 Slides PPTX), \url{http://www.openglinsights.com/} (OpenGL Insights Website)",
+\url{http://blog.icare3d.org/2012/05/gtc-2012-talk-octree-based-sparse.html} (GTC 2012 Talk)",
 date = {2012-07-01},
 booktitle = {OpenGL Insights},
 publisher = {CRC Press, Patrick Cozzi and Christophe Riccio},
@@ -1003,7 +922,6 @@ pages = {235-251},
 year = {2011},
 doi = {10.1080/2151237X.2011.621761},
 URL = {http://www.tandfonline.com/doi/abs/10.1080/2151237X.2011.621761},
-eprint = {http://www.tandfonline.com/doi/pdf/10.1080/2151237X.2011.621761},
 abstract = { Abstract In this article we describe and investigate tiled shading. The tiled techniques, though simple, enable substantial improvements to both deferred and forward shading. Tiled Shading has been previously discussed only in terms of deferred shading (tiled deferred shading). We contribute a more detailed description of the technique, introduce tiled forward shading (a generalization of tiled deferred shading to also apply to forward shading), and a thorough performance evaluation. Tiled Forward Shading has many of the advantages of deferred shading, for example, scene management and light management are decoupled. At the same time, unlike traditional deferred and tiled deferred shading, full screen antialiasing and transparency are trivially supported. We also present a thorough comparison of the performance of tiled deferred, tiled forward, and traditional deferred shading. Our evaluation shows that tiled deferred shading has the least variable worst-case performance, and scales the best with faster GPUs. Tiled deferred shading is especially suitable when there are many light sources. Tiled forward shading is shown to be competitive for scenes with fewer lights, and is much simpler than traditional forward shading techniques. Tiled shading also enables simple transitioning between deferred and forward shading. We demonstrate how this can be used to handle transparent geometry, frequently a problem when using deferred shading. Demo source code is available online at the address provided at the end of this paper. }
 }
 
@@ -1158,8 +1076,7 @@ year = {2010},
 title = {A GPGPU-based Pipeline for Accelerated Rendering of Point Clouds},
 author = {Christian Günther and Thomas Kanzok and Lars Linsen and Paul Rosenthal},
 editor = {Vaclav Skala},
-url = {http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.pdf
-http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.png},
+url = {http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.pdf},
 issn = {1213-6972},
 date = {2013-01-01},
 journal = {Journal of WSCG},
