Get figure alignment/spacing straight

--- a/cgsthesis.cls
+++ b/cgsthesis.cls
@@ -124,7 +124,7 @@
 \RequirePackage[capitalise,noabbrev,nameinlink]{cleveref}
 \RequirePackage[normal,labelfont=bf,textfont=it,font=small]{caption}
 \captionsetup[figure]{skip=\medskipamount,belowskip=-7pt}
-\captionsetup[table]{skip=0pt,belowskip=\medskipamount}
+\captionsetup[table]{skip=\medskipamount,belowskip=-7pt}
 \RequirePackage[labelformat=simple,labelfont=md,textfont=it,font=scriptsize,
                 skip=\medskipamount,belowskip=0pt,justification=centering]{subcaption}
 \renewcommand\thesubfigure{(\alph{subfigure})}
@@ -207,13 +207,13 @@
 }
 \setkomafont{pageheadfoot}{\cgs@dispfamily\footnotesize}
 \pagestyle{scrheadings}
-\clearscrheadfoot 
-\ihead{\headmark} 
-\ohead{\pagemark} 
+\clearscrheadfoot
+\ihead{\headmark}
+\ohead{\pagemark}
 \cfoot[\pagemark]{}
 \setheadsepline{.4pt}
 \renewcommand*{\chaptermarkformat}{\chapappifchapterprefix{\ }\thechapter. \ }
-\renewcommand*{\sectionmarkformat}{\thesection. \ } 
+\renewcommand*{\sectionmarkformat}{\thesection. \ }
 \renewcommand*{\subsectionmarkformat}{\thesubsection. \ }
 
 \setkomafont{dictumtext}{\itshape\small}
